--- a/DBMS Project/Flask/templates/amazonname.html
+++ b/DBMS Project/Flask/templates/amazonname.html
@@ -15,7 +15,9 @@
 		<h1>MOVIES</h1>
 		<table>
 			{% for item in Name1 %}
+			 {% set idd=item[0] %} 
 				<tr>
+					<form class = "form" action="\feedback" method="POST">
 					<td>{{ item[0] }}</td>
 					<td>{{ item[1] }}</td>
 					<td>{{ item[2] }}</td>
@@ -24,6 +26,13 @@
 					<td>{{ item[5] }}</td>
 					<td>{{ item[6] }}</td>
 					<td>{{ item[7] }}</td>
+					<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+					 </form>
+
+					 </form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
 				</tr>
 			{% endfor %}
 		</table>
@@ -32,7 +41,9 @@
 		<h1>SHOWS</h1>
 		<table>
 			{% for item in Name2 %}
+			 {% set idd=item[0] %} 
 				<tr>
+					<form class = "form" action="\feedback" method="POST">
 					<td>{{ item[0] }}</td>
 					<td>{{ item[1] }}</td>
 					<td>{{ item[2] }}</td>
@@ -41,6 +52,13 @@
 					<td>{{ item[5] }}</td>
 					<td>{{ item[6] }}</td>
 					<td>{{ item[7] }}</td>
+					<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+				</form>
+
+				</form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
 				</tr>
 			{% endfor %}
 		</table>
