--- a/DBMS Project/Flask/templates/hotstarname.html
+++ b/DBMS Project/Flask/templates/hotstarname.html
@@ -15,14 +15,24 @@
 		<h1>MOVIES</h1>
 		<table>
 			{% for item in Name1 %}
+			 {% set idd=item[0] %} 
 				<tr>
+					<form class = "form" action="\feedback" method="POST">
+					<td>{{ item[0] }}</td>
 					<td>{{ item[1] }}</td>
+					<td>{{ item[2] }}</td>
+					<td>{{ item[3] }}</td>
 					<td>{{ item[4] }}</td>
-					<td>{{ item[13] }}</td>
 					<td>{{ item[5] }}</td>
+					<td>{{ item[6] }}</td>
 					<td>{{ item[7] }}</td>
-					<td>{{ item[8] }}</td>
-					<td>{{ item[14] }}</td>
+					<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+					 </form>
+
+					 </form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
 				</tr>
 			{% endfor %}
 		</table>
@@ -31,15 +41,24 @@
 		<h1>SHOWS</h1>
 		<table>
 			{% for item in Name2 %}
+			 {% set idd=item[0] %} 
 				<tr>
+					<form class = "form" action="\feedback" method="POST">
+					<td>{{ item[0] }}</td>
 					<td>{{ item[1] }}</td>
-					<td>{{ item[4] }}</td>a
-					<td>{{ item[13] }}</td>
+					<td>{{ item[2] }}</td>
+					<td>{{ item[3] }}</td>
+					<td>{{ item[4] }}</td>
 					<td>{{ item[5] }}</td>
+					<td>{{ item[6] }}</td>
 					<td>{{ item[7] }}</td>
-					<td>{{ item[8] }}</td>
-					<td>{{ item[14] }}</td>
-					<td>{{ item[16] }}</td>
+					<td><button required name="1" class="btn btn-primary my-1" placeholder="Feedback"  method = 'POST' value="{{idd}}" >FEEDBACK</button></td>
+				</form>
+
+				</form>
+					<form class="form" action="\watchlist" method="POST">
+						<td><button required name="2" class="btn btn-primary my-1" placeholder="Add to Watchlist"  method = 'POST' value="{{idd}}" >ADD TO WATCHLIST</button></td>
+					</form>
 				</tr>
 			{% endfor %}
 		</table>
@@ -51,4 +70,5 @@
 
 
 {% endblock content %}
+
 
